# django-site

./: pyproject.toml
.github/workflows/: ci.yml
mysite/: settings.py
tests/: test_something.py
