[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Levi Notik <levinotik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.2"
confidential = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-django = "^3.7.0"
pytest-xdist = "^1.31.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
